# face-identifier

./: .gitignore  README.md  pyproject.toml
face_identifier/: __init__.py  dataset.py  datasets.py  evaluations.py  loss.py  model.py  models.py  processes.py  transforms.py  visualization.py
notebooks/: training-detector.ipynb  training-identifier.ipynb  training-model.ipynb
